	`regexp-index'.

	* twittering-mode.el (debug-print): Reduce redundant calls of
	`insert' because it can take multiple arguments.
	(debug-printf): Remove an unnecessary call to `concat' because
	`insert' can take multiple arguments.

	* twittering-mode.el (twittering-extract-timeline-spec): Fix the
	regexp for "search" timeline spec; same as for "filter".

2010-02-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el (test-format-status): replace the
	format specifier "%t" with "%T".

	* twittering-mode.el (twittering-extract-timeline-spec): fix the
	regexp for "filter" timeline spec.
	* test/test-twittering-mode.el (timeline-spec): add a test for
	trailing backslashes.

	* twittering-mode.el (twittering-extract-timeline-spec): add error
	messages for some conditions.

	* twittering-mode.el
	(twittering-read-timeline-spec-with-completion): fix the regexp
	for judging whether a list name is required or not.

	* twittering-mode.el
	(twittering-read-timeline-spec-with-completion): catch errors on
	interpreting timeline spec string.

2010-02-07  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-get): Add an optional
	argument for a response data format.
	(twittering-http-post): Likewise.
	(twittering-get-list-index): Adjust callers.
	(twittering-http-post): Delete unused argument `contents'.

	* twittering-mode.el (twittering-http-get-default-sentinel): Check
	status-code here instead of `twittering-http-default-sentinel'.
	(twittering-http-get-list-index-sentinel): Likewise.
	(twittering-http-post-default-sentinel): Likewise.
	(twittering-http-default-sentinel): Adjust callers.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Set "" explicitly if user does not have a list.

2010-02-06  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-default-sentinel): New defun
	to share code between `twittering-http-get-default-sentinel',