@@ -133,6 +133,10 @@
 	* twittering-mode.el (twittering-extract-timeline-spec): Fix the
 	regexp for "search" timeline spec; same as for "filter".
 
+	* twittering-mode.el (twittering-make-clickable-status-datum):
+	When trying to add a text property to `source', check it is
+	non-nil first for avoiding an error caused by `string-match'.
+
 2010-02-07  Tadashi MATSUO  <tad@mymail.twin.jp>
 
 	* test/test-twittering-mode.el (test-format-status): replace the
